--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-location": "^18.0.2",
+    "expo-notifications": "~0.29.8",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
@@ -36,6 +38,7 @@
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
